tests/ast_interpreter/err_fun_arity_too_many.expected
<string>:6:5: error: function expects 2 arguments, but 3 were provided
    add(1, 2, 3);
    ^^^
